# penkit

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml
cli/: main.py  shell.py
core/: plugin.py  session.py
docs/: development_guide.md  getting_started.md
docs/modules/: web_scanner.md
examples/: basic_scan.txt
integrations/: nmap_integration.py
modules/port_scanner/: __init__.py
penkit/cli/: main.py  shell.py
penkit/core/: config.py  exceptions.py  models.py  plugin.py  session.py
penkit/integrations/: base.py  nmap_integration.py  sqlmap_integration.py
penkit/modules/port_scanner/: __init__.py
penkit/modules/web_scanner/: __init__.py
penkit/utils/: json_utils.py
tests/: test_plugin.py
tests/integrations/: test_sqlmap_integration.py
tests/modules/: test_web_scanner.py
