[tool.poetry]
name = "penkit"
version = "0.1.0"
description = "Advanced Open-Source Penetration Testing Toolkit"
authors = ["Rasoul Faramarzi <sploit@yahoo.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sploitkit/penkit"
keywords = ["security", "penetration-testing", "hacking", "cybersecurity"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.7.0"
pydantic = "^2.5.0"
pluggy = "^1.3.0"
sqlalchemy = "^2.0.0"
aiohttp = "^3.9.0"
prompt-toolkit = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
mypy = "^1.6.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.scripts]
penkit = "penkit.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]